--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/sc-live/jobukyu-client/issues"
   },
-  "homepage": "https://github.com/sc-live/jobukyu-client"
+  "homepage": "https://github.com/sc-live/jobukyu-client",
+  "devDependencies": {
+    "grunt": "~0.4.2",
+    "grunt-contrib-jshint": "~0.8.0"
+  }
 }
