--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Client for the jobukyu job queue",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/mocha"
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,8 @@
   "devDependencies": {
     "grunt": "~0.4.2",
     "grunt-contrib-jshint": "~0.8.0",
-    "mocha": "~1.17.1"
+    "mocha": "~1.17.1",
+    "grunt-mocha-test": "~0.9.0"
   },
   "dependencies": {
     "request": "~2.31.0"
