--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Client for the jobukyu job queue",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha"
+    "test": "./node_modules/.bin/mocha",
+    "coverage": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha --report lcov -- -R spec test/*.js",
+    "coveralls": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- -- -u exports --report lcovonly -- -R spec -- test/*.js && cat ./coverage/lcov.info | ./node_modules/.bin/coveralls && rm -rf ./coverage"
   },
   "repository": {
     "type": "git",
@@ -26,7 +28,8 @@
     "grunt": "~0.4.2",
     "grunt-contrib-jshint": "~0.8.0",
     "mocha": "~1.17.1",
-    "grunt-mocha-test": "~0.9.0"
+    "grunt-mocha-test": "~0.9.0",
+    "istanbul": "~0.2.4"
   },
   "dependencies": {
     "request": "~2.31.0"
