--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "grunt-contrib-jshint": "~0.8.0",
     "mocha": "~1.17.1",
     "grunt-mocha-test": "~0.9.0",
-    "istanbul": "~0.2.4"
+    "istanbul": "~0.2.4",
+    "coveralls": "~2.7.1"
   },
   "dependencies": {
     "request": "~2.31.0"
