--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "mocha": "~1.17.1",
     "grunt-mocha-test": "~0.9.0",
     "istanbul": "~0.2.4",
-    "coveralls": "~2.7.1"
+    "coveralls": "~2.7.1",
+    "async": "~0.2.10"
   },
   "dependencies": {
     "request": "~2.31.0"
